feat(spark): upgrade spark to version 4.0.0